WS/k8s.labs.05/addons/prometheus-operator/promo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app: prometheus
spec:
  rules:
    - host: prom.kubernauts.local
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-operated 
              servicePort: 9090
